test_results/providers.txt
test
+- run test 463 pass, 11 fail, 1 crash (475 total)
/Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/json/dynamic.zig:88:21: 0x1016ae993 in jsonParse__anon_40810 (test)
            switch (try source.nextAllocMax(allocator, .alloc_always, options.max_value_len.?)) {
                    ^
/Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/json/static.zig:273:17: 0x1016984a3 in innerParse__anon_38425 (test)
                return T.jsonParse(allocator, source, options);
                ^
/Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/json/static.zig:149:19: 0x10167d663 in parseFromTokenSourceLeaky__anon_37616 (test)
    const value = try innerParse(T, allocator, scanner_or_reader, resolved_options);
                  ^
/Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/json/static.zig:116:20: 0x101664107 in parseFromTokenSource__anon_36674 (test)
    parsed.value = try parseFromTokenSourceLeaky(T, parsed.arena.allocator(), scanner_or_reader, options);
                   ^
/Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/json/static.zig:82:5: 0x10165ec37 in parseFromSlice__anon_33517 (test)
    return parseFromTokenSource(T, allocator, &scanner, options);
    ^
/Users/asil/.openclaw/workspace/nullclaw/src/providers/helpers.zig:517:20: 0x101b1f147 in test.buildRequestBodyWithSystem escapes special chars in both fields (test)
    const parsed = try std.json.parseFromSlice(std.json.Value, allocator, body, .{});
                   ^
[provider_router] (warn): primary provider 'failing' failed (class=transient): error.EmbeddingApiError
[provider_router] (warn): fallback provider 'failing' failed (class=transient): error.EmbeddingApiError
error: 'providers.gemini.test.GeminiCliCredentials isExpired with future timestamp returns false' failed:
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/testing.zig:615:14: 0x102e12197 in expect (test)
           if (!ok) return error.TestUnexpectedResult;
                    ^
       /Users/asil/.openclaw/workspace/nullclaw/src/providers/gemini.zig:1251:5: 0x1031c745f in test.GeminiCliCredentials isExpired with future timestamp returns false (test)
           try std.testing.expect(!creds.isExpired());
           ^
error: 'providers.gemini.test.GeminiCliCredentials isExpired with 5-min buffer edge case' failed:
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/testing.zig:615:14: 0x102e12197 in expect (test)
           if (!ok) return error.TestUnexpectedResult;
                    ^
       /Users/asil/.openclaw/workspace/nullclaw/src/providers/gemini.zig:1290:5: 0x1031c7833 in test.GeminiCliCredentials isExpired with 5-min buffer edge case (test)
           try std.testing.expect(!creds_valid.isExpired());
           ^
error: 'providers.gemini.test.writeCredentialsJson produces valid JSON' failed:
       /Users/asil/.openclaw/workspace/nullclaw/src/providers/gemini.zig:255:5: 0x1031ce49b in writeCredentialsJson (test)
           return error.FileWriteError;
           ^
       /Users/asil/.openclaw/workspace/nullclaw/src/providers/gemini.zig:1570:5: 0x1031cea2b in test.writeCredentialsJson produces valid JSON (test)
           try writeCredentialsJson(alloc, creds, path);
           ^
error: 'providers.gemini.test.writeCredentialsJson without refresh token' failed:
       /Users/asil/.openclaw/workspace/nullclaw/src/providers/gemini.zig:255:5: 0x1031ce49b in writeCredentialsJson (test)
           return error.FileWriteError;
           ^
       /Users/asil/.openclaw/workspace/nullclaw/src/providers/gemini.zig:1610:5: 0x1031d28bf in test.writeCredentialsJson without refresh token (test)
           try writeCredentialsJson(alloc, creds, path);
           ^
error: 'providers.gemini.test.writeCredentialsJson escapes token strings' failed:
       /Users/asil/.openclaw/workspace/nullclaw/src/providers/gemini.zig:255:5: 0x1031ce49b in writeCredentialsJson (test)
           return error.FileWriteError;
           ^
       /Users/asil/.openclaw/workspace/nullclaw/src/providers/gemini.zig:1649:5: 0x1031d33bb in test.writeCredentialsJson escapes token strings (test)
           try writeCredentialsJson(alloc, creds, path);
           ^
error: 'providers.sse.test.parseAnthropicSseLine empty line returns skip' terminated with signal ABRT with stderr:
       thread 4501848 panic: start index 6 is larger than end index 0
       /Users/asil/.openclaw/workspace/nullclaw/src/providers/sse.zig:186:25: 0x10321b623 in parseAnthropicSseLine (test)
           const data = trimmed[data_prefix.len..];
                               ^
       /Users/asil/.openclaw/workspace/nullclaw/src/providers/sse.zig:360:45: 0x10321c3f7 in test.parseAnthropicSseLine empty line returns skip (test)
           const result = try parseAnthropicSseLine(std.testing.allocator, "", "");
                                                   ^
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/compiler/test_runner.zig:147:68: 0x102d372a7 in mainServer (test)
                       const status: TestResults.Status = if (test_fn.func()) |v| s: {
                                                                          ^
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/compiler/test_runner.zig:68:26: 0x102d351b7 in main (test)
               return mainServer(init) catch @panic("internal test runner failure");
                                ^
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/start.zig:678:88: 0x102d34caf in callMain (test)
           if (fn_info.params[0].type.? == std.process.Init.Minimal) return wrapMain(root.main(.{
                                                                                              ^
       ???:?:?: 0x1877b1d53 in start (/usr/lib/dyld)
error: 'providers.claude_cli.test.ClaudeCliProvider.init returns CliNotFound for missing binary' failed:
       expected error.CliNotFound, found error.NotSupported
       /Users/asil/.openclaw/workspace/nullclaw/src/providers/claude_cli.zig:150:5: 0x101ae74f7 in checkCliAvailable (test)
           return error.NotSupported;
           ^
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/testing.zig:72:13: 0x101ae765b in expectError__anon_449735 (test)
                   return error.TestUnexpectedError;
                   ^
       /Users/asil/.openclaw/workspace/nullclaw/src/providers/claude_cli.zig:260:5: 0x101ae7767 in test.ClaudeCliProvider.init returns CliNotFound for missing binary (test)
           try std.testing.expectError(error.CliNotFound, result);
           ^
error: 'providers.codex_cli.test.CodexCliProvider checkCliAvailable returns CliNotFound for missing binary' failed:
       expected error.CliNotFound, found error.NotSupported
       /Users/asil/.openclaw/workspace/nullclaw/src/providers/codex_cli.zig:113:5: 0x101ae8b4f in checkCliAvailable (test)
           return error.NotSupported;
           ^
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/testing.zig:72:13: 0x101ae8cb3 in expectError__anon_449817 (test)
                   return error.TestUnexpectedError;
                   ^
       /Users/asil/.openclaw/workspace/nullclaw/src/providers/codex_cli.zig:162:5: 0x101ae8dab in test.CodexCliProvider checkCliAvailable returns CliNotFound for missing binary (test)
           try std.testing.expectError(error.CliNotFound, result);
           ^
error: 'providers.helpers.test.buildRequestBody escapes double quotes in prompt' failed:
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/json/Scanner.zig:407:62: 0x1016993ab in next (test)
                               if (self.stack.pop() != OBJECT_MODE) return error.SyntaxError;
                                                                    ^
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/json/Scanner.zig:169:27: 0x1016b7cef in nextAllocMax (test)
                   else => |err| return err,
                                 ^
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/json/dynamic.zig:88:21: 0x1016ae993 in jsonParse__anon_40810 (test)
                   switch (try source.nextAllocMax(allocator, .alloc_always, options.max_value_len.?)) {
                           ^
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/json/static.zig:273:17: 0x1016984a3 in innerParse__anon_38425 (test)
                       return T.jsonParse(allocator, source, options);
                       ^
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/json/static.zig:149:19: 0x10167d663 in parseFromTokenSourceLeaky__anon_37616 (test)
           const value = try innerParse(T, allocator, scanner_or_reader, resolved_options);
                         ^
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/json/static.zig:116:20: 0x101664107 in parseFromTokenSource__anon_36674 (test)
           parsed.value = try parseFromTokenSourceLeaky(T, parsed.arena.allocator(), scanner_or_reader, options);
                          ^
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/json/static.zig:82:5: 0x10165ec37 in parseFromSlice__anon_33517 (test)
           return parseFromTokenSource(T, allocator, &scanner, options);
           ^
       /Users/asil/.openclaw/workspace/nullclaw/src/providers/helpers.zig:486:20: 0x101b1e64b in test.buildRequestBody escapes double quotes in prompt (test)
           const parsed = try std.json.parseFromSlice(std.json.Value, allocator, body, .{});
                          ^
error: 'providers.helpers.test.buildRequestBody escapes newlines in prompt' failed:
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/json/Scanner.zig:407:62: 0x1016993ab in next (test)
                               if (self.stack.pop() != OBJECT_MODE) return error.SyntaxError;
                                                                    ^
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/json/Scanner.zig:169:27: 0x1016b7cef in nextAllocMax (test)
                   else => |err| return err,
                                 ^
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/json/dynamic.zig:88:21: 0x1016ae993 in jsonParse__anon_40810 (test)
                   switch (try source.nextAllocMax(allocator, .alloc_always, options.max_value_len.?)) {
                           ^
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/json/static.zig:273:17: 0x1016984a3 in innerParse__anon_38425 (test)
                       return T.jsonParse(allocator, source, options);
                       ^
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/json/static.zig:149:19: 0x10167d663 in parseFromTokenSourceLeaky__anon_37616 (test)
           const value = try innerParse(T, allocator, scanner_or_reader, resolved_options);
                         ^
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/json/static.zig:116:20: 0x101664107 in parseFromTokenSource__anon_36674 (test)
           parsed.value = try parseFromTokenSourceLeaky(T, parsed.arena.allocator(), scanner_or_reader, options);
                          ^
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/json/static.zig:82:5: 0x10165ec37 in parseFromSlice__anon_33517 (test)
           return parseFromTokenSource(T, allocator, &scanner, options);
           ^
       /Users/asil/.openclaw/workspace/nullclaw/src/providers/helpers.zig:496:20: 0x101b1e9a3 in test.buildRequestBody escapes newlines in prompt (test)
           const parsed = try std.json.parseFromSlice(std.json.Value, allocator, body, .{});
                          ^
error: 'providers.helpers.test.buildRequestBody escapes backslash in prompt' failed:
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/json/Scanner.zig:407:62: 0x1016993ab in next (test)
                               if (self.stack.pop() != OBJECT_MODE) return error.SyntaxError;
                                                                    ^
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/json/Scanner.zig:169:27: 0x1016b7cef in nextAllocMax (test)
                   else => |err| return err,
                                 ^
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/json/dynamic.zig:88:21: 0x1016ae993 in jsonParse__anon_40810 (test)
                   switch (try source.nextAllocMax(allocator, .alloc_always, options.max_value_len.?)) {
                           ^
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/json/static.zig:273:17: 0x1016984a3 in innerParse__anon_38425 (test)
                       return T.jsonParse(allocator, source, options);
                       ^
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/json/static.zig:149:19: 0x10167d663 in parseFromTokenSourceLeaky__anon_37616 (test)
           const value = try innerParse(T, allocator, scanner_or_reader, resolved_options);
                         ^
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/json/static.zig:116:20: 0x101664107 in parseFromTokenSource__anon_36674 (test)
           parsed.value = try parseFromTokenSourceLeaky(T, parsed.arena.allocator(), scanner_or_reader, options);
                          ^
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/json/static.zig:82:5: 0x10165ec37 in parseFromSlice__anon_33517 (test)
           return parseFromTokenSource(T, allocator, &scanner, options);
           ^
       /Users/asil/.openclaw/workspace/nullclaw/src/providers/helpers.zig:506:20: 0x101b1ecfb in test.buildRequestBody escapes backslash in prompt (test)
           const parsed = try std.json.parseFromSlice(std.json.Value, allocator, body, .{});
                          ^
error: 'providers.helpers.test.buildRequestBodyWithSystem escapes special chars in both fields' failed:
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/json/Scanner.zig:407:62: 0x1016993ab in next (test)
                               if (self.stack.pop() != OBJECT_MODE) return error.SyntaxError;
                                                                    ^
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/json/Scanner.zig:169:27: 0x1016b7cef in nextAllocMax (test)
                   else => |err| return err,
                                 ^
failed command: ./.zig-cache/o/cba1b4072d5b0a1df89c4baf29910534/test --cache-dir=./.zig-cache --seed=0xacd4a986 --listen=-

Build Summary: 6/8 steps succeeded (1 failed); 463/475 tests passed (11 failed, 1 crashed)
test transitive failure
+- run test 463 pass, 11 fail, 1 crash (475 total)
|  +- compile test Debug native success 16s MaxRSS:609M
|     +- WriteFile sqlite3.h cached
|     +- compile lib sqlite3 Debug native cached 73ms MaxRSS:30M
|     +- compile lib sqlite3 Debug native (reused)
|     +- options cached
+- run test success 236ms MaxRSS:2M
   +- compile test Debug native success 4s MaxRSS:254M
      +- WriteFile sqlite3.h (reused)
      +- compile lib sqlite3 Debug native (reused)
      +- compile lib sqlite3 Debug native (reused)
      +- WriteFile sqlite3.h (reused)
      +- compile lib sqlite3 Debug native (reused)
      +- compile lib sqlite3 Debug native (reused)
      +- options (reused)

error: the following build command failed with exit code 1:
.zig-cache/o/0105c9ee9be62dc964bdfac84a8967a7/build /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/zig /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib /Users/asil/.openclaw/workspace/nullclaw .zig-cache /Users/asil/.cache/zig --seed 0xacd4a986 -Zaa837520a1409cf6 test -Dtest-file=providers --summary all
